Fixed z-index problem with modals.

--- a/resources/assets/scss/style.scss
+++ b/resources/assets/scss/style.scss
@@ -5,3 +5,7 @@
 .navbar-text {
 	color: #fff;
 }
+
+.modal {
+	z-index: 1040;
+}
